// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> align should render a center aligned button if align=center 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
  >
    <button
      class="Buttonweb__StyledButton-sc-1bczm74-0 euGXoT Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 GfyZP"
      data-testid="ds-button"
      type="button"
    >
      <div
        class="Textweb__Text-dvo2dp-0 hFSNKL"
        color="light.900"
        data-testid="ds-text"
      >
        Click Me
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> align should render a left aligned button if align=left 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
  >
    <button
      class="Buttonweb__StyledButton-sc-1bczm74-0 euGXoT Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 iZAQVi"
      data-testid="ds-button"
      type="button"
    >
      <div
        class="Textweb__Text-dvo2dp-0 hFSNKL"
        color="light.900"
        data-testid="ds-text"
      >
        Click Me
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> align should render a right aligned button if align=right 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
  >
    <button
      class="Buttonweb__StyledButton-sc-1bczm74-0 euGXoT Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 iqxGqB"
      data-testid="ds-button"
      type="button"
    >
      <div
        class="Textweb__Text-dvo2dp-0 hFSNKL"
        color="light.900"
        data-testid="ds-text"
      >
        Click Me
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> block should render a block button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-1bczm74-0 bTEByr Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 gLQXFx"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-dvo2dp-0 hFSNKL"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> disabled should render a disabled button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-1bczm74-0 hBsuop Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 iZAQVi"
    data-testid="ds-button"
    disabled=""
    type="button"
  >
    <div
      class="Textweb__Text-dvo2dp-0 eRXRZt"
      color="light.950"
      data-testid="ds-text"
    >
      Disabled Button
    </div>
  </button>
</div>
`;

exports[`<Button /> focus should have focus when input is focused 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-1bczm74-0 euGXoT Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 iZAQVi"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-dvo2dp-0 hFSNKL"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> icon with children with icon left should render a button with icon on left 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-1bczm74-0 euGXoT Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 iZAQVi"
    data-testid="ds-button"
    type="button"
  >
    <svg
      class="Spaceweb__Space-sc-1gh69p2-0 jwKLqd"
      data-testid="ds-icon"
      fill="rgba(255, 255, 255, 1.0)"
      height="20"
      viewBox="0 0 24 24"
      width="20"
    >
      <path
        d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
      />
    </svg>
    <div
      class="Textweb__Text-dvo2dp-0 hFSNKL"
      color="light.900"
      data-testid="ds-text"
    >
      Button
    </div>
  </button>
</div>
`;

exports[`<Button /> icon with children with icon right should render a button with icon on right 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-1bczm74-0 euGXoT Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 iZAQVi"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-dvo2dp-0 hFSNKL"
      color="light.900"
      data-testid="ds-text"
    >
      Button
    </div>
    <svg
      class="Spaceweb__Space-sc-1gh69p2-0 faIYZx"
      data-testid="ds-icon"
      fill="rgba(255, 255, 255, 1.0)"
      height="20"
      viewBox="0 0 24 24"
      width="20"
    >
      <path
        d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Button /> icon without children should render icon only button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-1bczm74-0 euGXoT Spaceweb__Space-sc-1gh69p2-0 iVpbxw Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 iZAQVi"
    data-testid="ds-button"
    type="button"
  >
    <svg
      class="Spaceweb__Space-sc-1gh69p2-0 cwrkNt"
      data-testid="ds-icon"
      fill="rgba(255, 255, 255, 1.0)"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Button /> size should render a large button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-1bczm74-0 euGXoT Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fNlmaA Flexweb__Flex-h5ddrw-0 iZAQVi"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-dvo2dp-0 hFSNKL"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> size should render a medium(default) button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-1bczm74-0 euGXoT Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 iZAQVi"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-dvo2dp-0 hFSNKL"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> size should render a small button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-1bczm74-0 euGXoT Spaceweb__Space-sc-1gh69p2-0 heaQVx Sizeweb__Size-t4oux4-0 eYZBwS Flexweb__Flex-h5ddrw-0 iZAQVi"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-dvo2dp-0 cNiOBS"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> size should render a xsmall button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-1bczm74-0 euGXoT Spaceweb__Space-sc-1gh69p2-0 jikQZG Sizeweb__Size-t4oux4-0 gXFOFq Flexweb__Flex-h5ddrw-0 iZAQVi"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-dvo2dp-0 fmA-DNH"
      color="light.900"
      data-testid="ds-text"
    >
      CLICK ME
    </div>
  </button>
</div>
`;

exports[`<Button /> variant should render a primary(default) button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-1bczm74-0 euGXoT Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 iZAQVi"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-dvo2dp-0 hFSNKL"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> variant should render a secondary button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-1bczm74-0 cMPIjb Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 iZAQVi"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-dvo2dp-0 cmHbrY"
      color="primary.800"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> variant should render a tertiary button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-1bczm74-0 fxSyxB Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 iZAQVi"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-dvo2dp-0 cmHbrY"
      color="primary.800"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> variantColor should render a primary button based on provided variantColor 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-1bczm74-0 dKBzKO Spaceweb__Space-sc-1gh69p2-0 cBHCOI Sizeweb__Size-t4oux4-0 fGgZzx Flexweb__Flex-h5ddrw-0 iZAQVi"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-dvo2dp-0 hFSNKL"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;
